syntax = "proto2";

package mappers;

option java_package = "ch.unibe.scg.cc";

enum CloneType {
	LITERAL = 1;
	RENAMED = 2;
	GAPPED = 3;
}

message Project {
	optional bytes hash = 1;
	optional string name = 2;
	repeated Version versions = 3;
}

message Version {
	optional bytes hash = 1;
	// Hash of the project containing this version.
	optional bytes project = 2;
	optional string name = 3;
}

// A named file of source code
message CodeFile {
	optional bytes hash = 1;
	optional bytes version = 2;
	optional string path = 3;
	optional string contents = 4;
}

message Function {
	optional bytes hash = 1;
	// hash of the referencing code_file
	optional bytes code_file = 2;
	optional string contents = 3;
	// first line of the function in the surrounding file.
	optional int32 base_line = 4;
}

message Clone {
	optional Snippet thisSnippet = 1;
	optional Snippet thatSnippet = 2;
}

message Snippet {
	optional bytes hash = 1;
	optional bytes function = 2;
	// Location relative to the surrounding function.
	// Not the file.
	optional int32 position = 3;
	optional CloneType clone_type = 4;
	// Hash of the contents.
	optional int32 length = 5;
	// Number of functions that this snippet occurs in.
	optional int64 commonness = 6;
}

message CloneGroup {
	// A clone group really has several (similar!) strings representing them.
	// This is one of them
	optional string text = 1;
	repeated Occurrence occurrences = 2;
}

message Occurrence {
	optional Project project = 1;
	optional Version version = 2;
	optional CodeFile codeFile = 3;
	optional Function function = 4;
	// Relative to the function.
	// Not the file.
	optional int32 position = 9;
	// The position of this occurrence in the file
	// is at position + function_baseline
	optional int32 function_baseline = 10;
	// Number of lines of the clone
	optional int32 length = 11;
}

message GitRepo {
	optional string project_name = 1;
	optional bytes pack_refs = 2;
	optional bytes pack_file = 3;
}